--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@jiaminghi/data-view": "^2.10.0",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.1",
     "element-ui": "^2.15.13",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
